--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,23 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+<!-- {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
+
+# Academic-industry research partnerships
+
+Under [ADIA Lab](https://www.adialab.ae/), the scientific research institution of ADIA, I have supervised a number of short-term research projects in data science for various university programmes and departments, usually MSc-level capstones. Below is a running list:
+
+- LSE (2024-Present): *Mean field congestion in dry bulk shipping.* PhD Economics.
+- LSE (2023-Present): *Mean field games in global shipping flows.* MSc Data Science.
+- UCL (2024-Present): *Detecting structural breaks in spatial agricultural grids.* MSc Computer Science.
+- UCL/Oxford (2023-24): *Nowcasting global trade with time series signatures & shipping data.* MSc MCF.
+- U. of Toronto (2024): *Statistics of UN Comtrade.* MFRM (Master of Financial Risk Management).
+- U. of Toronto (2023): *Nowcasting inflation with the Baltic Indices.* MFRM.
+- Institut Polytechnique de Paris / Ecole Polytechnique (2023-24): *The global shipping graph.* M2DS.
+- Ecole des Ponts ParisTech (2023): *The economic world through the lens of shipping.* M2.
+- Khalifa University (2022): *Analysis of corporate supply chains.* MSc Computational Data Science.
+- Khalifa University (2022): *Studies in institutional ownership & geographical revenue.* MSc Comp. DS.
