--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,77 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+<!-- {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
+
+<h1>Academic-industry research partnerships (2022-Present)</h1>
+
+Under <a href="https://www.adialab.ae/">ADIA Lab</a>, the scientific research institution of ADIA,
+I have supervised a number of short-term research projects in data science for various university
+programs and departments, usually MSc-level capstones. Below is a running list.
+
+<ul>
+  <li>
+    <strong>LSE (2024-Present), PhD Economics</strong>
+    <ul>
+      <li><i>Mean field congestion in dry bulk shipping.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>LSE (2023-Present), MSc Data Science</strong>
+    <ul>
+      <li><i>Mean field games in global shipping flows.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>UCL (2024-Present), MSc Computer Science</strong>
+    <ul>
+      <li><i>Detecting structural breaks in spatial agricultural grids.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>UCL/Oxford (2023-24), MSc MCF</strong>
+    <ul>
+      <li><i>Nowcasting global trade with time series signatures & shipping data.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>U. of Toronto (2024), MFRM (Master of Financial Risk Management)</strong>
+    <ul>
+      <li><i>Statistics of UN Comtrade.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>U. of Toronto (2023), MFRM</strong>
+    <ul>
+      <li><i>Nowcasting inflation with the Baltic Indices.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>Institut Polytechnique de Paris / Ecole Polytechnique (2023-24), M2DS</strong>
+    <ul>
+      <li><i>The global shipping graph.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>Ecole des Ponts ParisTech (2023), M2</strong>
+    <ul>
+      <li><i>The economic world through the lens of shipping.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>Khalifa University (2022), MSc Computational Data Science</strong>
+    <ul>
+      <li><i>Analysis of corporate supply chains.</i></li>
+    </ul>
+  </li>
+  <li>
+    <strong>Khalifa University (2022), MSc Comp. DS</strong>
+    <ul>
+      <li><i>Studies in institutional ownership & geographical revenue.</i></li>
+    </ul>
+  </li>
+</ul>
