--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -11,69 +11,69 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %} -->
 
-<h1>Academic-industry research partnerships (2022-Present)</h1>
+<h2>Academic-industry research partnerships (ADIA, 2022-Present)</h2>
 
 Under <a href="https://www.adialab.ae/">ADIA Lab</a>, the scientific research institution of ADIA,
 I have supervised a number of short-term research projects in data science for various university
-programs and departments, usually MSc-level capstones. Below is a running list.
+programs and departments, usually MSc-level capstones (half- or full-term). Below is a running list.
 
 <ul>
   <li>
-    <strong>LSE (2024-Present), PhD Economics</strong>
+    <strong>LSE (2024-Present), [PhD Economics](https://www.lse.ac.uk/study-at-lse/Graduate/degree-programmes-2024/MResPhD-Economics)</strong>
     <ul>
       <li><i>Mean field congestion in dry bulk shipping.</i></li>
     </ul>
   </li>
   <li>
-    <strong>LSE (2023-Present), MSc Data Science</strong>
+    <strong>LSE (2023-Present), [MSc Data Science](https://www.lse.ac.uk/study-at-lse/Graduate/degree-programmes-2024/MSc-Data-Science)</strong>
     <ul>
       <li><i>Mean field games in global shipping flows.</i></li>
     </ul>
   </li>
   <li>
-    <strong>UCL (2024-Present), MSc Computer Science</strong>
+    <strong>UCL (2024-Present), [MSc Computer Science](https://www.ucl.ac.uk/prospective-students/graduate/taught-degrees/computer-science-msc)</strong>
     <ul>
       <li><i>Detecting structural breaks in spatial agricultural grids.</i></li>
     </ul>
   </li>
   <li>
-    <strong>UCL/Oxford (2023-24), MSc MCF</strong>
+    <strong>UCL/Oxford (2023-24), [MSc MCF (Master of Computational Finance)](https://www.ox.ac.uk/admissions/graduate/courses/msc-mathematical-and-computational-finance)</strong>
     <ul>
       <li><i>Nowcasting global trade with time series signatures & shipping data.</i></li>
     </ul>
   </li>
   <li>
-    <strong>U. of Toronto (2024), MFRM (Master of Financial Risk Management)</strong>
+    <strong>U. of Toronto (2024), [MFRM (Master of Financial Risk Management)](https://www.rotman.utoronto.ca/degrees/mastersprograms/mfrm)</strong>
     <ul>
       <li><i>Statistics of UN Comtrade.</i></li>
     </ul>
   </li>
   <li>
-    <strong>U. of Toronto (2023), MFRM</strong>
+    <strong>U. of Toronto (2023), [MFRM](https://www.rotman.utoronto.ca/degrees/mastersprograms/mfrm)</strong>
     <ul>
       <li><i>Nowcasting inflation with the Baltic Indices.</i></li>
     </ul>
   </li>
   <li>
-    <strong>Institut Polytechnique de Paris / Ecole Polytechnique (2023-24), M2DS</strong>
+    <strong>Institut Polytechnique de Paris / Ecole Polytechnique (2023-24), [M2DS](https://synapses.polytechnique.fr/catalogue/2023-2024/diplome/26/M2DS-m2-data-sciences)</strong>
     <ul>
       <li><i>The global shipping graph.</i></li>
     </ul>
   </li>
   <li>
-    <strong>Ecole des Ponts ParisTech (2023), M2</strong>
+    <strong>Ecole des Ponts ParisTech (2023), [Master 2](https://ecoledesponts.fr/en/masters-programs)</strong>
     <ul>
       <li><i>The economic world through the lens of shipping.</i></li>
     </ul>
   </li>
   <li>
-    <strong>Khalifa University (2022), MSc Computational Data Science</strong>
+    <strong>Khalifa University (2022), [MSc Computational Data Science](https://www.ku.ac.ae/khalifa-university-and-adia-develop-masters-program-in-computational-data-science)</strong>
     <ul>
       <li><i>Analysis of corporate supply chains.</i></li>
     </ul>
   </li>
   <li>
-    <strong>Khalifa University (2022), MSc Comp. DS</strong>
+    <strong>Khalifa University (2022), [MSc Computational Data Science](https://www.ku.ac.ae/khalifa-university-and-adia-develop-masters-program-in-computational-data-science)</strong>
     <ul>
       <li><i>Studies in institutional ownership & geographical revenue.</i></li>
     </ul>
