--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -79,3 +79,15 @@ programs and departments, usually MSc-level capstones (half- or full-term). Belo
     </ul>
   </li>
 </ul>
+
+<h2>American Statistical Association (ASA), DataFest</h2>
+
+Every year the American Statistical Association (ASA) hosts data science hackathons across
+the country, in which university students must analyze a complex dataset and present their findings in 48 hours.
+I mentored groups of students for several of these back when I was in Los Angeles.
+
+<ul>
+  <li>Chapman University (2020)</li>
+  <li>UCLA (2020)</li>
+  <li>UCLA (2019)</li>
+</ul>
