--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -80,7 +80,7 @@ programs and departments, usually MSc-level capstones (half- or full-term). Belo
   </li>
 </ul>
 
-<h2>American Statistical Association (ASA), DataFest</h2>
+<h2>American Statistical Association (ASA), [DataFest](https://ww2.amstat.org/education/datafest/)</h2>
 
 Every year the American Statistical Association (ASA) hosts data science hackathons across
 the country, in which university students must analyze a complex dataset and present their findings in 48 hours.
