--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -14,7 +14,7 @@ author_profile: true
 <h2>Academic-industry research partnerships (ADIA Lab, 2022-Present)</h2>
 
 Under <a href="https://www.adialab.ae/">ADIA Lab</a>, the scientific research institution of ADIA,
-I have supervised a number of **short-term research projects in data science** for various university
+I have supervised a number of <emph>short-term research projects in data science</emph> for various university
 programs and departments, usually MSc-level capstones (half- or full-term). Below is a running list.
 
 <ul>
