--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -21,70 +21,70 @@ programs and departments, usually MSc-level capstones (half- or full-term). Belo
   <li>
     <strong>LSE (2024-Present), PhD Economics</strong>
     <ul>
-      <li>Program link: [PhD Economics](https://www.lse.ac.uk/study-at-lse/Graduate/degree-programmes-2024/MResPhD-Economics)</li>
+      <li>Program link: <a href="https://www.lse.ac.uk/study-at-lse/Graduate/degree-programmes-2024/MResPhD-Economics">PhD Economics</a></li>
       <li><i>Mean field congestion in dry bulk shipping.</i></li>
     </ul>
   </li>
   <li>
     <strong>LSE (2023-Present), MSc Data Science</strong>
     <ul>
-      <li>Program link: [MSc Data Science](https://www.lse.ac.uk/study-at-lse/Graduate/degree-programmes-2024/MSc-Data-Science)</li>
+      <li>Program link: <a href="https://www.lse.ac.uk/study-at-lse/Graduate/degree-programmes-2024/MSc-Data-Science">MSc Data Science</a></li>
       <li><i>Mean field games in global shipping flows.</i></li>
     </ul>
   </li>
   <li>
     <strong>UCL (2024-Present), MSc Computer Science</strong>
     <ul>
-      <li>Program link: [MSc Computer Science](https://www.ucl.ac.uk/prospective-students/graduate/taught-degrees/computer-science-msc)</li>
+      <li>Program link: <a href="https://www.ucl.ac.uk/prospective-students/graduate/taught-degrees/computer-science-msc">MSc Computer Science</a></li>
       <li><i>Detecting structural breaks in spatial agricultural grids.</i></li>
     </ul>
   </li>
   <li>
     <strong>UCL/Oxford (2023-24), MSc MCF (Master of Computational Finance)</strong>
     <ul>
-      <li>Program link: [MSc MCF (Master of Computational Finance)](https://www.ox.ac.uk/admissions/graduate/courses/msc-mathematical-and-computational-finance)</li>
+      <li>Program link: <a href="https://www.ox.ac.uk/admissions/graduate/courses/msc-mathematical-and-computational-finance">MSc MCF (Master of Computational Finance)</a></li>
       <li><i>Nowcasting global trade with time series signatures & shipping data.</i></li>
     </ul>
   </li>
   <li>
     <strong>U. of Toronto (2024), MFRM (Master of Financial Risk Management)</strong>
     <ul>
-      <li>Program link: [MFRM (Master of Financial Risk Management)](https://www.rotman.utoronto.ca/degrees/mastersprograms/mfrm)</li>
+      <li>Program link: <a href="https://www.rotman.utoronto.ca/degrees/mastersprograms/mfrm">MFRM (Master of Financial Risk Management)</a></li>
       <li><i>Statistics of UN Comtrade.</i></li>
     </ul>
   </li>
   <li>
     <strong>U. of Toronto (2023), MFRM</strong>
     <ul>
-      <li>Program link: [MFRM](https://www.rotman.utoronto.ca/degrees/mastersprograms/mfrm)</li>
+      <li>Program link: <a href="https://www.rotman.utoronto.ca/degrees/mastersprograms/mfrm">MFRM</a></li>
       <li><i>Nowcasting inflation with the Baltic Indices.</i></li>
     </ul>
   </li>
   <li>
     <strong>Institut Polytechnique de Paris / Ecole Polytechnique (2023-24), M2DS</strong>
     <ul>
-      <li>Program link: [M2DS](https://synapses.polytechnique.fr/catalogue/2023-2024/diplome/26/M2DS-m2-data-sciences)</li>
+      <li>Program link: <a href="https://synapses.polytechnique.fr/catalogue/2023-2024/diplome/26/M2DS-m2-data-sciences">M2DS</a></li>
       <li><i>The global shipping graph.</i></li>
     </ul>
   </li>
   <li>
     <strong>Ecole des Ponts ParisTech (2023), Master 2</strong>
     <ul>
-      <li>Program link: [Master 2](https://ecoledesponts.fr/en/masters-programs)</li>
+      <li>Program link: <a href="https://ecoledesponts.fr/en/masters-programs">Master 2</a></li>
       <li><i>The economic world through the lens of shipping.</i></li>
     </ul>
   </li>
   <li>
     <strong>Khalifa University (2022), MSc Computational Data Science</strong>
     <ul>
-      <li>Program link: [MSc Computational Data Science](https://www.ku.ac.ae/khalifa-university-and-adia-develop-masters-program-in-computational-data-science)</li>
+      <li>Program link: <a href="https://www.ku.ac.ae/khalifa-university-and-adia-develop-masters-program-in-computational-data-science">MSc Computational Data Science</a></li>
       <li><i>Analysis of corporate supply chains.</i></li>
     </ul>
   </li>
   <li>
     <strong>Khalifa University (2022), MSc Computational Data Science</strong>
     <ul>
-      <li>Program link: [MSc Computational Data Science](https://www.ku.ac.ae/khalifa-university-and-adia-develop-masters-program-in-computational-data-science)</li>
+      <li>Program link: <a href="https://www.ku.ac.ae/khalifa-university-and-adia-develop-masters-program-in-computational-data-science">MSc Computational Data Science</a></li>
       <li><i>Studies in institutional ownership & geographical revenue.</i></li>
     </ul>
   </li>
