--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -90,7 +90,9 @@ programs and departments, usually MSc-level capstones (half- or full-term). Belo
   </li>
 </ul>
 
-<h2>American Statistical Association (ASA), [DataFest](https://ww2.amstat.org/education/datafest/)</h2>
+<h2>American Statistical Association (ASA), Datafest </h2>
+
+[DataFest website](https://ww2.amstat.org/education/datafest/)
 
 Every year the American Statistical Association (ASA) hosts data science hackathons across
 the country, in which university students must analyze a complex dataset and present their findings in 48 hours.
